Bug 160622 - Some text in an OLE is partially cut off on Windows with Skia disabled
Summary: Some text in an OLE is partially cut off on Windows with Skia disabled
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha0+
Hardware: All Windows (All)
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:24.8.0 target:24.2.4
Keywords: bibisectNotNeeded, regression
Depends on:
Blocks: OLE-Objects
  Show dependency treegraph
 
Reported: 2024-04-11 05:38 UTC by Mike Kaganski
Modified: 2024-05-03 11:32 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
A Word OLE object with a single-cell table with character B (Liberation Sans, 10pt) (24.41 KB, application/vnd.oasis.opendocument.text)
2024-04-11 05:38 UTC, Mike Kaganski
Details
A screenshot of the problem (11.51 KB, image/png)
2024-04-11 05:52 UTC, Mike Kaganski
Details
Screenshoot (309.08 KB, image/png)
2024-04-11 11:00 UTC, m_a_riosv
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2024-04-11 05:38:09 UTC
Created attachment 193609 [details]
A Word OLE object with a single-cell table with character B (Liberation Sans, 10pt)

In master, opening the attachment shows the top of the character B "cut off".

Regression after commit 8962141a12c966b2d891829925e6203bf8d51852 (tdf#160430: Fix glyph bounds calculation, and use basegfx::B2DRectangle, 2024-04-01).
Comment 1 Mike Kaganski 2024-04-11 05:52:16 UTC
Created attachment 193610 [details]
A screenshot of the problem

This is how it looks in current master with Skia disabled.
Comment 2 m_a_riosv 2024-04-11 11:00:08 UTC
Created attachment 193618 [details]
Screenshoot

Not reproducible.
Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: d5dcc9de8ebce5d14be89ddeb6606ef0aeebf7a9
CPU threads: 16; OS: Windows 10.0 Build 22631; UI render: default; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
Comment 3 Mike Kaganski 2024-04-11 11:02:06 UTC
(In reply to m_a_riosv from comment #2)
> Not reproducible.

Yes, due to the nature of the problem, it won't be repro on hi-dpi screens.
Comment 4 m_a_riosv 2024-04-11 23:07:56 UTC
Right, if of interest.

I can reproduce with all resolutions: 1024x768, 1280x720, 1280x800, 1280x1024, 1600x1000, 1600x1200, 1680x1050,1920x1080, 1920x1200, 2240x1400, 2560x1600, 3840x2400 at 100% scale on system screen options.
But not with 1280x1024 or up, at 150% scale on system screen options.

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: d5dcc9de8ebce5d14be89ddeb6606ef0aeebf7a9
CPU threads: 16; OS: Windows 10.0 Build 22631; UI render: default; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
Comment 5 Mike Kaganski 2024-04-18 09:35:20 UTC
https://gerrit.libreoffice.org/c/core/+/166236
Comment 6 Commit Notification 2024-04-19 03:32:14 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2642643ec07cd7f3d28fe558769297578c36de19

tdf#160622: Let SalLayout::GetBoundRect return basegfx::B2DRectangle

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2024-05-03 11:32:40 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/aa2df54f37926cf95261eefade1b87da3229cfd7

tdf#160622: Let SalLayout::GetBoundRect return basegfx::B2DRectangle

It will be available in 24.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.